// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zl3m0r-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-ok5l9f-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-ok5l9f-StyledLabel:active .eo0gyll2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ok5l9f-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-pptpcl-StyledToggle:focus-within,
.cache-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-pptpcl-StyledToggle[data-checked='true']:focus-within,
.cache-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet efrlpzy1"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            Label 
          </legend>
          <div
            class="cache-zl3m0r-Stack efjor120"
          >
            <label
              aria-disabled="false"
              class="cache-ok5l9f-StyledLabel eo0gyll0"
            >
              <div
                class="cache-155uuxj-Stack efjor120"
              >
                <div
                  class="cache-15fwcc4-StyledRow eagug70"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-pptpcl-StyledToggle eo0gyll2"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-1myp2ct-StyledCheckbox eo0gyll1"
                  id=":r1:"
                  name="Group.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="cache-ok5l9f-StyledLabel eo0gyll0"
            >
              <div
                class="cache-155uuxj-Stack efjor120"
              >
                <div
                  class="cache-15fwcc4-StyledRow eagug70"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-pptpcl-StyledToggle eo0gyll2"
                data-checked="true"
                data-disabled="false"
              >
                <input
                  aria-checked="true"
                  class="cache-1myp2ct-StyledCheckbox eo0gyll1"
                  id=":r3:"
                  name="Group.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupField should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-zl3m0r-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-ok5l9f-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-ok5l9f-StyledLabel:active .eo0gyll2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ok5l9f-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-pptpcl-StyledToggle:focus-within,
.cache-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-pptpcl-StyledToggle[data-checked='true']:focus-within,
.cache-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet efrlpzy1"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            ToggleGroupField events 
            <svg
              class="efrlpzy0 cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon e17h3kg70"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </legend>
          <div
            class="cache-zl3m0r-Stack efjor120"
          >
            <label
              aria-disabled="false"
              class="cache-ok5l9f-StyledLabel eo0gyll0"
            >
              <div
                class="cache-155uuxj-Stack efjor120"
              >
                <div
                  class="cache-15fwcc4-StyledRow eagug70"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-pptpcl-StyledToggle eo0gyll2"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-1myp2ct-StyledCheckbox eo0gyll1"
                  id=":r6:"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="cache-ok5l9f-StyledLabel eo0gyll0"
            >
              <div
                class="cache-155uuxj-Stack efjor120"
              >
                <div
                  class="cache-15fwcc4-StyledRow eagug70"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-pptpcl-StyledToggle eo0gyll2"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-1myp2ct-StyledCheckbox eo0gyll1"
                  id=":r8:"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
